# ytb_history

./: .gitignore  AGENTS.md  README.md  docs_model_bootstrap.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/workflows/: ci.yml  monitor.yml  pages.yml  predict_model.yml  train_model.yml
config/: channels.py  logging.yaml  modeling.yaml  settings.yaml  transcription_channels.py
data/alerts/: alert_summary.json  latest_alerts.json  latest_alerts.jsonl  latest_alerts.md
data/briefs/: latest_weekly_brief.html  latest_weekly_brief.json  latest_weekly_brief.md
data/creative_packages/: creative_packages_summary.json  latest_creative_packages.csv  latest_hook_candidates.csv  latest_originality_checks.csv  latest_production_checklist.csv  latest_script_outlines.csv  latest_thumbnail_briefs.csv  latest_title_candidates.csv
data/decision/: decision_summary.json  latest_action_candidates.csv  latest_content_opportunities.csv  latest_decision_context.json  latest_opportunity_matrix.csv  latest_watchlist_recommendations.csv
data/model_intelligence/: latest_hybrid_recommendations.csv  model_intelligence_summary.json
data/model_registry/: latest_model_manifest.json  prediction_contract.json  training_runs_index.json
data/model_reports/: latest_content_driver_feature_direction.csv  latest_content_driver_feature_importance.csv  latest_content_driver_group_importance.csv  latest_content_driver_leaderboard.csv  latest_content_driver_report.html  latest_content_driver_report.md  (+6 more)
scripts/: verify_model_reports_bootstrap.py
ytb_history/: __init__.py
(+272 files in other folders)
