[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytb_history"
version = "0.1.0"
description = "YouTube historical monitor scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ytb_history"}]
dependencies = ["PyYAML>=6.0", "requests>=2.31", "scikit-learn>=1.5", "joblib>=1.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
